--- a/model/config.yml
+++ b/model/config.yml
@@ -12,19 +12,23 @@ dataset:
     hue: 0.5
   train_csv: 'train_list.txt'
   val_csv: 'val.txt'
+  test_csv: 'test_private_list.txt'
   mean: [0.5, 0.5, 0.5]
   std: [0.5, 0.5, 0.5]
 train:
   from: 'scratch'
+  net: 'densenet161-densenet161'
   rgb_size: [224,224]
   depth_size: [64, 64]
   output_size: 255
   batch_size: 32
-  lr: 0.0001
-  num_epochs: 100
+  lr: 1e-5
+  w_decay: 1e-5
+  eps: 1e-8
+  num_epochs: 30
   smoothing: True
 test:
-  model: ''
+  model: '2021-12-14 14_00_24-densenet161-densenet161.pth'
   rgb_size: [224,224]
   depth_size: [64, 64]
   batch_size: 32
