--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 certifi==2021.10.8
 numpy==1.21.4
 Pillow==8.4.0
-torch==1.10.0+cu113
-torchaudio==0.10.0+cu113
-torchvision==0.11.1+cu113
+torch==1.10.0
+torchvision==0.11.1
 typing-extensions==3.10.0.2
 wincertstore==0.2
-PyYAML=6.0
-pandas=1.3.4
-opencv-contrib-python=4.5.4.60
-opencv-python=4.5.4.60
+PyYAML==6.0
+pandas==1.3.4
+opencv-contrib-python==4.5.4.60
+opencv-python==4.5.4.60
