--- a/config.yml
+++ b/config.yml
@@ -17,9 +17,9 @@ dataset:
   std: [0.5, 0.5, 0.5]
 train:
   from: 'scratch'
-  net: 'resnet18_cdc'
+  net: 'resnet18'
   rgb_size: [224,224]
-  depth_size: [64, 64]
+  depth_size: [224, 224]
   batch_size: 64
   lr: 0.0001
   w_decay: 0.000001
@@ -29,6 +29,6 @@ train:
   cmfl_alpha: 1
   cmfl_gamma: 3
 test:
-  model: '2021-12-19 14-19-00_densenet121.pth'
+  model: '2021-12-25 21-39-24_resnet18_cdc.pth'
   rgb_size: [224,224]
-  batch_size: 16
+  batch_size: 32
